k8/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automate-all-the-things
  namespace: default
spec:
  selector:
    matchLabels:
      location: prd
      app: automate-all-the-things
  replicas: 2
  template:
    metadata:
      labels:
        location: prd
        app: automate-all-the-things
    spec:
      containers:
      - name: automate-all-the-things
        image: kylesloan/automate-all-the-things:latest
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
